# Songbook

./: .gitignore  Makefile  README.md
LyricSheets/LyricSheets/: APIClient.swift  EditorView.swift  HomeView.swift  LyricSheetsApp.swift  Song.swift
LyricSheets/LyricSheets.xcodeproj/: project.pbxproj
LyricSheets/LyricSheetsTests/: LyricSheetsTests.swift
LyricSheets/LyricSheetsUITests/: LyricSheetsUITests.swift  LyricSheetsUITestsLaunchTests.swift
Songbook/: ContentView.swift  Info.plist  Persistence.swift  SongbookApp.swift
Songbook.xcodeproj/: project.pbxproj
Songbook/Songbook/: AudioView.swift  EditorView.swift  HomeView.swift  NotesView.swift  RichTextEditor.swift  Song.swift  SongCard.swift  SongbookApp.swift  UTType+Songbook.swift  VideoView.swift
Songbook/Songbook.xcdatamodeld/: .xccurrentversion
Songbook/Songbook.xcodeproj/: project.pbxproj
Songbook/SongbookUITests/: SongbookUITestsLaunchTests.swift
SongbookTests/: SongbookTests.swift
SongbookUITests/: SongbookUITests.swift  SongbookUITestsLaunchTests.swift
api-python/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  schemas.py
api-python/Services/: llm.py
app-ios/: APIClient.swift  EditorView.swift  HomeView.swift  LyricSheetsApp.swift
ios/: Info.plist
ios/Songbook/: EditorView.swift  InspireOptionsSheet.swift  NotesView.swift  RichTextEditor.swift  VideoView.swift
ios/Songbook.xcodeproj/: project.pbxproj
ios/SongbookTests/: SongbookTests.swift
ios/SongbookThumbnail/: Info.plist  (+1 more)
lyric-engine/: .env.example  main.py  pyproject.toml
(+21 files in other folders)
