[project]
name = "api-python"
version = "0.1.0"
description = ""
authors = [{name = "Palmer Nix",email = "nix.palmer9200@gmail.com"}]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
